--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Noto Sans;
     margin: 0 auto;
+    vertical-align: baseline;
 }
 
 a {
@@ -11,22 +12,16 @@ a {
 .menu {
     position: relative;
     width: 100%;
-    
-}
-
-@media (max-width: 1024px) {
-    .menu {
-        width: 100%;
-         } 
 }
 
 .menu-button {
     display: flex;
     color: white;
     background-color: #0284c7;
-    
-    
+    align-items: center;
+    justify-content: space-between;   
 }
+
 .name {
     font-size: 26px;
     font-weight: 700;
@@ -45,6 +40,64 @@ a {
     gap: 20px; 
 }
 
+.menu-hero {
+    height: 550px;
+    background: url(images/hero.png);
+    background-position: center top;
+    background-size: cover;
+    margin: 0% auto;
+}
+
+.inner-container {
+    width: 100%;
+    max-width: 1024px;
+    margin: 0% auto;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 59px;
+    color: #262626;
+    padding-top: 100px;
+    padding-bottom: 50px;
+    max-width: 50%;
+}
+
+p {
+    color: #0284c7;   
+}
+
+.text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    color: #0C4A6E;
+    max-width: 50%;  
+}
+
+.button-submit-hero {
+    margin: 0% auto;
+    max-width: 1024px;
+    padding-top: 50px;
+}
+
+.menu-submit {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #F0F9FF;
+    background-color: #0EA5E9;
+    border: 1px solid #0EA5E9;
+    border-radius: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
 .our-services {
     display: block;
     line-height: 54px;
@@ -54,19 +107,21 @@ a {
     margin: 0 auto;
     text-align: center;
     padding-top: 30px;
-    padding-bottom: 30px;
-    
+    padding-bottom: 30px;  
 }
+
+
 
 .clinic-services {
    display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
    margin: 0 auto;
    background-color: #0284C7;
    align-items: center;
    gap: 40px;
    padding-top: 30px;
-   padding-bottom: 30px;
-   padding-left: 470px;  
+   padding-bottom: 30px;   
 }
 
 .service-img {
@@ -77,65 +132,75 @@ a {
 }
 
 .menu-clinic {
-    position: relative;
-    display: inline-block;
-    width: 100%;
+    height: 600px;
+    background: url(images/background-1.png);
     margin: 0 auto;
 }
 
-
-.background-img {
-    height: 200px;  
+.menu-background-clinic {
+    width: 100%;
+    max-width: 1024px;
+    margin: 0% auto;  
 }
 
+
 .about-the-clinic {
-    position: absolute;
     color: #0C4A6E;
     font-weight: 700;
     font-size: 40px;
     line-height: 54px;
     text-align: center;
     margin: 0 auto;
-    padding-bottom: 30px;
-    width: 48em;
+    padding-bottom: 30px; 
+    padding-top: 30px;   
 }
 
 .clinic {
-    position: absolute;
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
-    text-align: center;
+    text-align: justify;
     margin: 0 auto;
     word-break: break-all;
     hyphens: auto;
     display: flex;
-    display: inline-block;
     justify-content: center;
     flex-wrap: wrap;
-    width: 40em;
     padding-top: 30px;
+    padding-bottom: 40px;
 }
 
-#detailed {
-    position: absolute;
+.button-detailed {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0% auto;
+    max-width: 1024px;
+}
+
+.detailed {
     font-weight: 700;
     font-size: 18px;
+    width: 250px;
     line-height: 25px;
     text-align: center;
     color: #F0F9FF;
+    padding-bottom: 5px;
+    padding-top: 5px;    
     border-radius: 10px;
     background: #0EA5E9;
     border: 1px solid #0EA5E9;
+    display: flex;
+    justify-content: center; 
 }
 
 .menu-reviews {
     display: flex;
-    flex-wrap: wrap;
-    display: block;
+    justify-content: space-between;
     margin: 0 auto;
-    width: 68em;
-    text-align: center;
+    max-width: 1024px;
+    flex-wrap: wrap;
+    padding-bottom: 50px;
+    
 }
 
 .your-reviews {
@@ -145,15 +210,34 @@ a {
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    vertical-align: baseline;
 }
 
 .your-feedback {
+    flex-grow: 2;
     display: flex;
+    
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    width: 40%;
+    box-sizing: border-box;
     border: 1px solid #E5E5E5;
     border-radius: 10px;
     background: #FFFFFF;
     gap: 10px;
+    
+}
 
+.name-client-feedback {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.your-feedback img {
+    display: flex;
+    float: left;
 }
 
 .name-client {
@@ -161,7 +245,8 @@ a {
     font-size: 24px;
     color: #0284C7;
     line-height: 33px;
-    float: right;
+    float: top;
+    display: flex;
 }
 
 .feedback {
@@ -170,32 +255,55 @@ a {
     color: #737373;
     line-height: 19px;
     float: right;
-}
-
-.map-img {
-    height: 500px;
-    color: #F0F9FF 80%;
-    position: relative;
-    display: inline-block;
-    
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .our-branches {
-    position: absolute;
+    background: url(images/map-background.png);
+    background-position: center top;
+    background-size: cover;
+    height: 500px;  
+    background: linear-gradient #FFFFFF;
+}
+
+.menu-inner-container {
+    width: 100%;
+    max-width: 1024px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.our-department {
+    display: flex;
+    justify-content: center;
     font-weight: 700;
     font-size: 40px;
     color: #0369A1;
     text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
-.adress {
+.menu-address {
     display: flex;
-    position: absolute;
-    background: #FFFFFF;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    background-color: #FFFFFF;
     border: 1px solid #0284C7;
     border-radius: 25px;
     border-color: #0284C7;
-    align-items: center;
+    height: 250px;
+    padding-left: 20px;  
 }
 
 .operating-mode {
@@ -204,11 +312,22 @@ a {
     color: #075985;
 }
 
+.branches-icon {
+    display: flex;
+    padding-top: 20px;
+
+}
+
 .branches {
     color: #075985;
     font-weight: 500;
     font-size: 18px;
-    line-height: 25px;
+    line-height: 25px; 
+}
+
+.operating-icon {
+    display: flex;
+    padding-top: 20px;    
 }
 
 .branch-phone {
@@ -216,11 +335,45 @@ a {
     font-weight: 600;
     font-size: 19px;
     line-height: 26px;
+    padding-top: 50px;
 }
 
 .our-details {
     background: #F0F9FF;
+    margin: 0 auto;
+    height: 300px;
+    padding-top: 50px;  
+}
+
+.line-detail {
+    margin: 0% auto;
+    max-width: 1024px;
     display: flex;
+    justify-content: space-between;
+    padding-bottom: 50px; 
+}
+
+.details {
+    display: flex;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    color: #075985;
+}
+
+.line-our {
+    margin: 0% auto;
+    max-width: 1024px;
+    display: flex;
+    justify-content: space-between;
+    text-align: justify;
+    
+}
+
+.line-our-detail {
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .our {
@@ -230,16 +383,16 @@ a {
     color: #075985;
 }
 
-.details {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    color: #075985;
-}
-
 .license {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 0% auto;
+    max-width: 1024px;
     font-weight: 400;
     font-size: 17px;
     line-height: 23px;
     color: #075985;
+    padding-top: 50px;
+       
 }
