--- a/doctors.css
+++ b/doctors.css
@@ -13,21 +13,27 @@ a {
     position: relative;
     width: 100%;
 }
-
 .menu-button {
-    display: flex;
     color: white;
     background-color: #0284c7;
+       
+}
+
+.menu-name-dento {
+    margin: 0% auto;
+    max-width: 1024px;
+    display: flex;
     align-items: center;
-    justify-content: space-between;   
+    justify-content: space-between;
+    
 }
 
 .name {
     font-size: 26px;
     font-weight: 700;
     line-height: 35px;
-    text-align: center;
-    margin: 0 auto;
+    text-align: right;
+    
 }
 
 .sections {
@@ -36,7 +42,6 @@ a {
     font-weight: 600;
     line-height: 30px;
     text-align: center;
-    margin: 0 auto;
     gap: 20px; 
 }
 
@@ -59,6 +64,8 @@ a {
     color: #0369A1;
     padding-bottom: 50px;
     padding-top: 50px;
+    word-break: break-all;
+    hyphens: auto;
 }
 p {
     font-weight: 600;
@@ -68,18 +75,34 @@ p {
     color: #737373;
     margin: 0% auto;
     max-width: 1024px;
+    word-break: break-all;
+    hyphens: auto;
 }
 
 .search {
     background: #E0F2FE;
     border: 1px solid #BAE6FD;
     border-radius: 20px;
-    height: 20px;
+    height: 30px;
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 50px; 
     
+}
+
+input  {
+    background-image: url(images/icon-magnifier.png);
+    background-repeat: no-repeat;
+    background-position: 4px;
+   border: none;
+   outline: none;
+   background-color: #E0F2FE;
+   padding-left: 30px;
+   border-radius: 20px;
+   height: 30px;
+   width: 780px;
     
+
 }
 
 .menu-specialists {
@@ -89,7 +112,8 @@ p {
     gap: 10px;
     padding-top: 50px;
     padding-bottom: 50px;
-   margin: 0% auto;
+    margin: 0% auto;
+    max-width: 1024px;
    
 }
 
@@ -141,6 +165,13 @@ p {
     padding-top: 50px;  
 }
 
+@media (max-width: 780px) {
+    .our-details {
+       height: 700px;
+         } 
+   
+}
+
 .line-detail {
     margin: 0% auto;
     max-width: 1024px;
@@ -165,16 +196,27 @@ p {
     justify-content: space-between;
 }
 
+@media (max-width: 780px) {
+    .line-our {
+       display: flex;
+       flex-direction: column;
+         }    
+}
+
 .line-our-detail {
     display: flex;
     flex-direction: column;
 }
 
 .our {
+    display: flex;
     font-weight: 600;
     font-size: 18px;
     line-height: 25px;
     color: #075985;
+    align-items: center;
+    align-items: flex-start;
+    
 }
 
 .license {
