--- a/service.css
+++ b/service.css
@@ -13,21 +13,27 @@ a {
     position: relative;
     width: 100%;
 }
-
 .menu-button {
-    display: flex;
     color: white;
     background-color: #0284c7;
+       
+}
+
+.menu-name-dento {
+    margin: 0% auto;
+    max-width: 1024px;
+    display: flex;
     align-items: center;
-    justify-content: space-between;   
+    justify-content: space-between;
+    
 }
 
 .name {
     font-size: 26px;
     font-weight: 700;
     line-height: 35px;
-    text-align: center;
-    margin: 0 auto;
+    text-align: right;
+    
 }
 
 .sections {
@@ -36,7 +42,6 @@ a {
     font-weight: 600;
     line-height: 30px;
     text-align: center;
-    margin: 0 auto;
     gap: 20px; 
 }
 
@@ -46,6 +51,13 @@ a {
     background-position: center top;
     background-size: cover;
     margin: 0% auto;
+}
+
+
+@media (max-width: 780px) {
+    .menu-hero {
+        height: 850px;
+         }   
 }
 
 .inner-container {
@@ -65,6 +77,8 @@ a {
     padding-top: 100px;
     padding-bottom: 50px;
     max-width: 50%;
+    word-break: break-all;
+    hyphens: auto;
 }
 
 p {
@@ -116,6 +130,13 @@ p {
 .caries-treatment-container {
     vertical-align: baseline;
     display: flex;
+}
+
+@media (max-width: 780px) {
+    .caries-treatment-container {
+       display: flex;
+       flex-direction: column;
+         }    
 }
 
 .caries {   
@@ -173,6 +194,18 @@ gap: 20px;
     padding-left: 10px;
 }
 
+.price1 {
+    color: #0ea5e9;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.price2 {
+    color: #15ce05;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
 .treatment-seal {
     background: #E0F2FE;
     border-radius: 30px;
@@ -198,28 +231,123 @@ gap: 20px;
 }
 
 .clinic-services {
-   display: flex;
-   justify-content: center;
-   flex-wrap: wrap;
-   margin: 0 auto;
-   background-color: #0284C7;
-   align-items: center;
-   gap: 40px;
-   padding-top: 30px;
-   padding-bottom: 30px;   
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    
+    background-color: #0284C7;
+    gap: 40px;
+    padding-top: 30px;
+    padding-bottom: 30px;   
+ }
+
+ .service-figure-arrow {
+    margin: 0% auto;
+    max-width: 1024px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;  
 }
 
-.service-img {
-   position: relative;
-   display: flex;
-   border-radius: 20px;
+@media (max-width: 780px) {
+    .service-figure-arrow {
+        flex-wrap: wrap;
+         } 
+    
 }
+ 
+ .service-img1 {
+    background-image: linear-gradient(to right, #0ea4e97d 10%, transparent 60%), url(images/service-3.png);
+    display: flex;
+    background-size: cover;
+    height: 180px;
+    flex-direction: column;
+    border-radius: 20px;
+    width: 280px;
+    color:  #F0F9FF;;
+    padding-top: 15px;
+    padding-left: 15px;   
+    padding-bottom: 15px;
+    justify-content: space-between;
+ }
+ 
+ .service-img2 {
+     background-image: linear-gradient(to right, #0ea4e97d 10%, transparent 60%), url(images/service-2.png);
+     display: flex;
+     background-size: cover;
+     height: 180px;
+     flex-direction: column;
+     border-radius: 20px;
+     width: 280px;
+     color:  #F0F9FF;;
+     padding-top: 15px;
+     padding-left: 15px;  
+     padding-bottom: 15px;
+     justify-content: space-between;
+  }
+ 
+  .service-img3 {
+     background-image: linear-gradient(to right, #0ea4e97d 10%, transparent 60%), url(images/service-1.png);
+     display: flex;
+     background-size: cover;
+     flex-direction: column;
+     height: 180px;
+     border-radius: 20px;
+     width: 280px;
+     color:  #F0F9FF;;
+     padding-top: 15px;
+     padding-left: 15px;  
+     padding-bottom: 15px;
+     justify-content: space-between;
+  }
+ 
+ 
+ .figure {
+     font-weight: 500;
+     font-size: 24px;
+     line-height: 32px;
+     color: #FFFFFF;
+ }
+ 
+ .arrow-tooth {
+     display: flex;
+     justify-content: space-between;
+     padding-right: 15px;
+ }
+ .counterclockwise {
+     color: #E0F2FE;
+     display: flex;
+     align-items: center;
+ }
+ 
+ 
+ .about-the-tooth {
+     font-weight: 600;
+     font-size: 16px;
+     line-height: 22px;  
+ }
+ 
+ .arrow {
+     width: 35px;
+     display: flex;
+     justify-content: flex-end;
+     font-size: 50px;
+     font-weight: 500px;
+ }
 
 .our-details {
     background: #F0F9FF;
     margin: 0 auto;
     height: 300px;
     padding-top: 50px;  
+}
+
+@media (max-width: 780px) {
+    .our-details {
+       height: 700px;
+         } 
+   
 }
 
 .line-detail {
@@ -246,6 +374,13 @@ gap: 20px;
     justify-content: space-between;
 }
 
+@media (max-width: 780px) {
+    .line-our {
+       display: flex;
+       flex-direction: column;
+         }    
+}
+
 .line-our-detail {
     display: flex;
     flex-direction: column;
@@ -253,10 +388,14 @@ gap: 20px;
 }
 
 .our {
+    display: flex;
     font-weight: 600;
     font-size: 18px;
     line-height: 25px;
     color: #075985;
+    align-items: center;
+    align-items: flex-start;
+    
 }
 
 .license {
