--- a/style.css
+++ b/style.css
@@ -15,19 +15,26 @@ a {
 }
 
 .menu-button {
-    display: flex;
     color: white;
     background-color: #0284c7;
+       
+}
+
+.menu-name-dento {
+    margin: 0% auto;
+    max-width: 1024px;
+    display: flex;
     align-items: center;
-    justify-content: space-between;   
+    justify-content: space-between;
+    
 }
 
 .name {
     font-size: 26px;
     font-weight: 700;
     line-height: 35px;
-    text-align: center;
-    margin: 0 auto;
+    text-align: right;
+    
 }
 
 .sections {
@@ -36,7 +43,6 @@ a {
     font-weight: 600;
     line-height: 30px;
     text-align: center;
-    margin: 0 auto;
     gap: 20px; 
 }
 
@@ -47,6 +53,15 @@ a {
     background-size: cover;
     margin: 0% auto;
 }
+
+
+@media (max-width: 780px) {
+    .menu-hero {
+        height: 850px;
+         } 
+    
+}
+
 
 .inner-container {
     width: 100%;
@@ -65,6 +80,9 @@ a {
     padding-top: 100px;
     padding-bottom: 50px;
     max-width: 50%;
+    word-break: break-all;
+    hyphens: auto;
+
 }
 
 p {
@@ -113,22 +131,110 @@ p {
 
 
 .clinic-services {
-   display: flex;
-   justify-content: center;
-   flex-wrap: wrap;
    margin: 0 auto;
    background-color: #0284C7;
-   align-items: center;
-   gap: 40px;
    padding-top: 30px;
    padding-bottom: 30px;   
 }
 
-.service-img {
-   position: relative;
+
+
+
+
+.service-figure-arrow {
+    margin: 0% auto;
+    max-width: 1024px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    
+}
+
+
+@media (max-width: 780px) {
+    .service-figure-arrow {
+        flex-wrap: wrap;
+         } 
+    
+}
+
+.service-img1 {
+   background-image: linear-gradient(to right, #0ea4e97d 10%, transparent 60%), url(images/service-3.png);
    display: flex;
+   background-size: cover;
+   height: 180px;
+   flex-direction: column;
    border-radius: 20px;
-   max-width: 1024px;
+   width: 280px;
+   color:  #F0F9FF;;
+   padding-top: 15px;
+   padding-left: 15px;   
+   padding-bottom: 15px;
+   justify-content: space-between;
+}
+
+.service-img2 {
+    background-image: linear-gradient(to right, #0ea4e97d 10%, transparent 60%), url(images/service-2.png);
+    display: flex;
+    background-size: cover;
+    height: 180px;
+    flex-direction: column;
+    border-radius: 20px;
+    width: 280px;
+    color:  #F0F9FF;;
+    padding-top: 15px;
+    padding-left: 15px;  
+    padding-bottom: 15px;
+    justify-content: space-between;
+ }
+
+ .service-img3 {
+    background-image: linear-gradient(to right, #0ea4e97d 10%, transparent 60%), url(images/service-1.png);
+    display: flex;
+    background-size: cover;
+    flex-direction: column;
+    height: 180px;
+    border-radius: 20px;
+    width: 280px;
+    color:  #F0F9FF;;
+    padding-top: 15px;
+    padding-left: 15px;  
+    padding-bottom: 15px;
+    justify-content: space-between;
+ }
+
+
+.figure {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    color: #FFFFFF;
+}
+
+.arrow-tooth {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 15px;
+}
+.counterclockwise {
+    color: #E0F2FE;
+    display: flex;
+    align-items: center;
+}
+
+
+.about-the-tooth {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;  
+}
+
+.arrow {
+    width: 35px;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 50px;
+    font-weight: 500px;
 }
 
 .menu-clinic {
@@ -137,6 +243,19 @@ p {
     margin: 0 auto;
 }
 
+@media (max-width: 780px) {
+    .menu-clinic {
+        height: 850px;
+         } 
+    
+}
+
+@media (max-width:360px) {
+    .menu-clinic {
+        height: 950px;
+         } 
+    
+}
 .menu-background-clinic {
     width: 100%;
     max-width: 1024px;
@@ -203,6 +322,8 @@ p {
     
 }
 
+
+
 .your-reviews {
     font-weight: 700;
     font-size: 40px;
@@ -212,6 +333,8 @@ p {
     padding-bottom: 50px;
     vertical-align: baseline;
 }
+
+
 
 .your-feedback {
     flex-grow: 2;
@@ -226,6 +349,14 @@ p {
     border-radius: 10px;
     background: #FFFFFF;
     gap: 10px;
+    
+}
+
+@media (max-width: 780px) {
+    .your-feedback {
+        display: flex;
+        flex-direction: column;
+         } 
     
 }
 
@@ -260,11 +391,19 @@ p {
 }
 
 .our-branches {
-    background: url(images/map-background.png);
+    background-image: url(images/map-background.png);
+    background-color: #F0F9FF;
+    background-blend-mode: multiply;
     background-position: center top;
     background-size: cover;
-    height: 500px;  
-    background: linear-gradient #FFFFFF;
+    height: 500px;    
+}
+
+@media (max-width: 780px) {
+    .our-branches {
+       height: 1000px;
+         } 
+    
 }
 
 .menu-inner-container {
@@ -291,7 +430,14 @@ p {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 20px;   
+}
+
+@media (max-width: 780px) {
+    .menu-address {
+       display: flex;
+       flex-direction: column;
+         } 
     
 }
 
@@ -315,7 +461,8 @@ p {
 .branches-icon {
     display: flex;
     padding-top: 20px;
-
+    align-items: flex-start;
+   
 }
 
 .branches {
@@ -345,6 +492,14 @@ p {
     padding-top: 50px;  
 }
 
+
+@media (max-width: 780px) {
+    .our-details {
+       height: 700px;
+         } 
+   
+}
+
 .line-detail {
     margin: 0% auto;
     max-width: 1024px;
@@ -370,6 +525,14 @@ p {
     
 }
 
+
+@media (max-width: 780px) {
+    .line-our {
+       display: flex;
+       flex-direction: column;
+         }    
+}
+
 .line-our-detail {
     display: flex;
     flex-direction: column;
@@ -377,10 +540,14 @@ p {
 }
 
 .our {
+    display: flex;
     font-weight: 600;
     font-size: 18px;
     line-height: 25px;
     color: #075985;
+    align-items: center;
+    align-items: flex-start;
+    
 }
 
 .license {
